# telegram_bot_for_mailing

./: .env-example  .gitignore  README.md  admin.py  bot.py  config.py  constants.py  errors.py  pyproject.toml  requments.txt  user.py  utils.py
interactions_later_answers_file/: base.py  read.py  write.py
interactions_posts_file/: base.py  read_file_about_post.py  write_file_about_post.py
interactions_users_file/: base.py  read_file_about_user.py  write_file_about_user.py
keyboards/: admin.py  answer.py  exclude_user.py  post.py  posts.py  set_content.py  start.py
